--- a/index.html
+++ b/index.html
@@ -53,13 +53,7 @@
     .lang-toggle button{border:0;background:transparent;padding:8px 12px;border-radius:999px;cursor:pointer;font-weight:600}
     .lang-toggle button.active{background:var(--accent);color:white}
 
-    main{display:grid;grid-template-columns:260px 1fr;gap:20px;align-items:start}
-
-    .sidebar{position:sticky;top:20px}
-    .category-list{background:#fff;padding:12px;border-radius:12px;box-shadow:var(--card-shadow)}
-    .category-list h3{margin:0 0 8px 0}
-    .category-item{padding:10px;border-radius:10px;cursor:pointer;margin-bottom:6px}
-    .category-item.active{background:linear-gradient(90deg,rgba(125,60,31,0.06),rgba(125,60,31,0.02));border-left:3px solid var(--accent)}
+    main{display:block;}
 
     .menu-area{display:flex;flex-direction:column;gap:18px}
     .category-section{display:grid;grid-template-columns:repeat(auto-fill,minmax(240px,1fr));gap:14px}
@@ -75,10 +69,6 @@
 
     footer{margin-top:26px;color:var(--muted);font-size:13px;text-align:center}
 
-    @media (max-width:900px){
-      main{grid-template-columns:1fr;}
-      .category-section{grid-template-columns:1fr;}
-    }
 
     .arabic{font-family: 'Amiri', 'Inter', serif;direction:rtl;text-align:right}
   </style>
@@ -105,12 +95,6 @@
     </header>
 
     <main>
-      <aside class="sidebar">
-        <div class="category-list" id="categoryList">
-          <h3 id="catTitle">Categories</h3>
-        </div>
-      </aside>
-
       <section class="menu-area">
         <div id="menuContent"></div>
       </section>
@@ -145,27 +129,6 @@
       image_url: row.image_url || '',
       available: (String(row.available||'TRUE').toLowerCase() !== 'false')
     }));
-  }
-
-  function buildCategories(items){
-    const cats = [...new Set(items.map(i => i.category))];
-
-    categories = cats.map(cat => {
-      const arCat = items.find(i => i.category === cat)?.ar_category || cat;
-      return { en: cat, ar: arCat };
-    });
-
-    const container = q('#categoryList');
-    container.querySelectorAll('.category-item').forEach(n => n.remove());
-
-    categories.forEach(c => {
-      const el = document.createElement('div');
-      el.className = 'category-item';
-      el.dataset.en = c.en;
-      el.dataset.ar = c.ar;
-      el.textContent = lang === 'ar' ? c.ar : c.en;
-      container.appendChild(el);
-    });
   }
 
   function renderMenu(filterCategory=null){
@@ -246,60 +209,61 @@
   function applyLanguageDirection(){
     const root = document.documentElement;
     const wrap = document.querySelector('.wrap');
-    const categoryItems = qAll('.category-item');
 
-    if(lang==='ar'){
+    if(lang === 'ar'){
       wrap.classList.add('arabic');
-      root.lang='ar'; root.dir='rtl';
-      q('#brandName').textContent=BRAND.nameAr;
-      q('#brandTag').textContent=BRAND.tagAr;
-      q('#catTitle').textContent='الأقسام';
-      q('#footerText').textContent='مفتوح يومياً · مأكولات تركية منزلية طازجة';
-      q('#btn-en').classList.remove('active'); q('#btn-ar').classList.add('active');
-      categoryItems.forEach(el=>el.textContent=el.dataset.ar);
+      root.lang = 'ar';
+      root.dir = 'rtl';
+      q('#brandName').textContent = BRAND.nameAr;
+      q('#brandTag').textContent = BRAND.tagAr;
+      q('#footerText').textContent = 'مفتوح يومياً · مأكولات تركية منزلية طازجة';
+      q('#btn-en').classList.remove('active');
+      q('#btn-ar').classList.add('active');
     } else {
       wrap.classList.remove('arabic');
-      root.lang='en'; root.dir='ltr';
-      q('#brandName').textContent=BRAND.nameEn;
-      q('#brandTag').textContent=BRAND.tagEn;
-      q('#catTitle').textContent='Categories';
-      q('#footerText').textContent='Open daily · Fresh home-style Turkish food';
-      q('#btn-en').classList.add('active'); q('#btn-ar').classList.remove('active');
-      categoryItems.forEach(el=>el.textContent=el.dataset.en);
+      root.lang = 'en';
+      root.dir = 'ltr';
+      q('#brandName').textContent = BRAND.nameEn;
+      q('#brandTag').textContent = BRAND.tagEn;
+      q('#footerText').textContent = 'Open daily · Fresh home-style Turkish food';
+      q('#btn-en').classList.add('active');
+      q('#btn-ar').classList.remove('active');
     }
   }
+
 
   async function fetchSheet(){
     try{
       const res = await fetch(SHEET_CSV_URL);
       const text = await res.text();
       data = parseCSVText(text);
-      buildCategories(data);
 
-      // default category: Starters
-      const defaultCategory = data.find(i=>i.category.toLowerCase().includes('starter'))?.category || categories[0].en;
-      qAll('.category-item').forEach(el=>{
-        el.classList.remove('active');
-        if(el.dataset.en === defaultCategory) el.classList.add('active');
-      });
-      renderMenu(null); // render all categories
+      categories = [...new Set(data.map(i => i.category))].map(cat => ({
+        en: cat,
+        ar: data.find(i => i.category === cat)?.ar_category || cat
+      }));
+
+      renderMenu(); // render everything
     }catch(err){
       console.error('Failed to load sheet', err);
-      q('#menuContent').innerHTML = '<div style="padding:20px;background:#fff;border-radius:12px;box-shadow:var(--card-shadow)">Failed to load the menu. Make sure you published the Google Sheet and set SHEET_CSV_URL correctly in the config at top of this file.</div>';
+      q('#menuContent').innerHTML = `
+        <div style="padding:20px;background:#fff;border-radius:12px;box-shadow:var(--card-shadow)">
+          Failed to load the menu. Please check the Google Sheet publishing settings.
+        </div>`;
     }
   }
 
   window.addEventListener('DOMContentLoaded', ()=>{
     q('#btn-en').addEventListener('click', ()=>{
-      lang='en';
-      const cat = document.querySelector('.category-item.active')?.dataset.en || categories[0].en;
-      renderMenu(cat);
+      lang = 'en';
+      renderMenu(); // re-render full menu
     });
+
     q('#btn-ar').addEventListener('click', ()=>{
-      lang='ar';
-      const cat = document.querySelector('.category-item.active')?.dataset.en || categories[0].en;
-      renderMenu(cat);
+      lang = 'ar';
+      renderMenu(); // re-render full menu
     });
+
 
     applyLanguageDirection();
 
